# Reborn_Fdu

./: .gitignore  .prettierignore  .prettierrc  deploy.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts  webp.py
public/: 419.xlsx  422.xlsx  427.xlsx  plot.xlsx
public/event/special/: 女生地址.txt
src/: App.css  App.tsx  index.css  main.tsx
src/assets/: index.tsx
src/components/auto-scroll-text/: index.css  index.tsx
src/components/image/: index.tsx
src/components/staggered-text/: index.tsx
src/components/transition/: index.css  index.tsx
src/data/: events_loaded.ts  pngname.ts
src/data/line/: CivilServantPath.ts  CorporatePath.ts  CounselorPath.ts  FreelancePath.ts  LifeLine.ts  LoveAfterPath.ts  LovePath.ts  LovePrePath.ts  NewsList.ts  OldList.ts  (+4 more)
src/error/: game-error.ts  read-error.ts
src/game/: context.ts  fixedarr.ts  fortest.ts  game.ts  gamesys.tsx  item.ts  player.ts  randompick.ts  resolute.ts  timeline.ts  type.ts  type.tsx  util.ts  util.tsx
src/hooks/: useAudio.ts  useAudioEnabled.tsx  useAudioPreloader.ts  useCircularTransition.tsx  useFastClick.ts  useFontLoader.ts  useImagePreloader.ts  useMobileFullScreen.ts  useRandomCG.ts  useSequenceAnimation.ts  useViewPort.ts
src/load/: read-components.ts  read.ts
src/logger/: logger.ts
src/stage2/: stage2.ts  util.ts
src/store/: data.ts  debug.ts  game.ts  ui.ts
src/type/: config.ts  type.ts
src/types/: audios.ts  cgImages.ts  images.ts  svg.d.ts  talent.tsx
src/utils/: circle.ts
(+32 files in other folders)
